# Arduino-CMake-Template

./: CMakeLists.txt
scripts/: arduino_mega.cmake  libarduino_mega.cmake
src/: CMakeLists.txt
src/WIZ/: CMakeLists.txt  Dhcp.cpp  Ethernet.cpp
src/c011/: CMakeLists.txt  c011_test.c
src/iclient/: CMakeLists.txt  README.md  iclient.cpp  opsprot.h
src/wiztest/: CMakeLists.txt  wiztest.cpp
